--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>1.4 portfolio</title>
-  </head>
+    <link rel="stylesheet" href="/style/main.css" media="screen"
   <!-- visual elements start here-->
   <body>
     <!-- header contains social media nav, as well as navagation bar.-->
@@ -21,8 +21,66 @@
         <a href="#About">Go to About Page</a>
         <a href="#Contact"></a>
       </nav>
-      
+    <!-- Header ends here -->
     </header>
+    <!--beginning of Carousel-->
+    <main class="carousel">
+      <ol>
+        <li><img class="carousel__IMAGE" src="PATH TO IMAGE" alt="" /></li>
+        <li><img src="PATH TO IMAGE" alt="" /></li>
+        <li><img src="PATH TO IMAGE" alt="" /></li>
+      </ol>
+      <!-- links to images for carousel-->
+      <nav>
+        <a href="#"></a>
+
+        <a href="#"></a>
+
+        <a href="#"></a>
+
+      </nav>
+    </main>
+    <!-- "article0 represents a standart article model. any modifications to this structure would be labeld "article(n)"-->
+    <section>
+
+      <article class="article0">
+        <h2"article0__title">Tony Hawk Foundation </h2>
+        <time"article0__date">this is a date</time>
+        <p"article0__para">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </p>
+        <a href="#LINK">June, 6, 2006</a>
+      </article>
+
+      <article class="article0">
+        <h2"article0__title">Rodney Mullen: Pop an ollie and innovate.</h2>
+        <time"article0__date">oct, 28, 2001</time>
+        <p"article0__para">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </p>
+        <a href="#LINK">Read more</a>
+      </article>
+
+      <article class="article0">
+        <h2"article0__title">Tony Hawk Foundation </h2>
+        <time"article0__date">The Year is 200x</time>
+        <p"article0__para">
+         Dr. Wily, world renowned robotics expert and owner of Wily Labs, has built new fortress and army of robotic henchmen. Led by eight new Robot Masters of his design: Metal Man, Air Man, Bubble Man, Quick Man, Crash Man, Flash Man, Heat Man, and Wood Man, it is here that Dr. Wily is holding and building his army. However... The Earth has a Hero Designed specificly to combat Dr Wilys "Reaver Bots!" Mega Man! Sent by his creator, Dr. Light, Megaman will defeat Dr. Wily and his Robot Masters
+
+        </p>
+        <a href="#LINK">Read more</a>
+      </article>
+    </section>
+      <a href="#"><img src="" alt="" /></a>
+      <a href="#"><img src="" alt="" /></a>
+      <a href="#"><img src="" alt="" /></a>
+      <a href="#"><img src="" alt="" /></a>
+      <a href="#"><img src="" alt="" /></a>
+      <a href="#"><img src="" alt="" /></a>
+    </Section>
+
+
+
 
     <footer>
 
