Got home, Opened laptop, realized I never finished I my commit. .

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>1.4 portfolio</title>
     <link rel="stylesheet" href="style/main.css" media="screen">
   <!-- visual elements start here-->
-  <a class="navigationborder__bottom">
+
   <body>
     <!-- header contains social media nav, as well as navagation bar.-->
     <div class="wrapper">
@@ -15,17 +15,17 @@
 
       <header class="navigaion">
         <nav class="navigation__socialnav">
-          <a class="socialnav--a" href="#facebook"><img src="assets/Social Media Icons/facebook.png" alt="" /></a>
-          <a class="socialnav--a"href="#Twitter"><img src="assets/Social Media Icons/rss.png" alt="" /></a>
-          <a class="socialnav--a"href="#rss"><img src="assets/Social Media Icons/rss.png" alt="" /></a>
-          <a class="socialnav--a"href="#YouTube"><img src="assets/Social Media Icons/youtube.png" alt="" /></a>
+          <a class="navigation__socialnav--a" href="#facebook"><img src="assets/Social Media Icons/facebook.png" alt="" /></a>
+          <a class="navigation__socialnav--a"href="#Twitter"><img src="assets/Social Media Icons/rss.png" alt="" /></a>
+          <a class="navigation__socialnav--a"href="#rss"><img src="assets/Social Media Icons/rss.png" alt="" /></a>
+          <a class="navigation__socialnav--a"href="#YouTube"><img src="assets/Social Media Icons/youtube.png" alt="" /></a>
         </nav>
 
         <nav class="navigation__pagenav">
-          <a href="#Home">Go to Homepage</a>
-          <a href="#News">View News</a>
-          <a href="#About">Go to About Page</a>
-          <a href="#Contact"></a>
+          <a class="navigation__pagenav--a"  href="#Home">HOME </a>
+          <a class="navigation__pagenav--a" href="#News">NEWS</a>
+          <a class="navigation__pagenav--a" href="#About">ABOUT</a>
+          <a class="navigation__pagenav--a" href="#Contact">CONTACT US</a>
         </nav>
       <!-- Header ends here -->
       </header>
