--- a/index.html
+++ b/index.html
@@ -9,17 +9,18 @@
   <body>
     <!-- header contains social media nav, as well as navagation bar.-->
     <div class="wrapper">
+      <header>
 
-
-
-
-      <header class="navigaion">
-        <nav class="navigation__socialnav">
-          <a class="navigation__socialnav--a" href="#facebook"><img src="assets/Social Media Icons/facebook.png" alt="" /></a>
-          <a class="navigation__socialnav--a"href="#Twitter"><img src="assets/Social Media Icons/rss.png" alt="" /></a>
-          <a class="navigation__socialnav--a"href="#rss"><img src="assets/Social Media Icons/rss.png" alt="" /></a>
-          <a class="navigation__socialnav--a"href="#YouTube"><img src="assets/Social Media Icons/youtube.png" alt="" /></a>
+        <nav class= "socialnav">
+          <a href="#"><img src="assets/Social Media Icons/facebook.png" alt="" /></a>
+          <a href="#"><img src="assets/Social Media Icons/twitter.png" alt="" /></a>
+          <a href="#"><img src="assets/Social Media Icons/rss.png" alt="" /></a>
+          <a href="#"><img src="assets/Social Media Icons/youtube.png" alt="" /></a>
         </nav>
+      </header>
+
+
+
 
         <nav class="navigation__pagenav">
           <a class="navigation__pagenav--a"  href="#Home">HOME </a>
@@ -27,14 +28,14 @@
           <a class="navigation__pagenav--a" href="#About">ABOUT</a>
           <a class="navigation__pagenav--a" href="#Contact">CONTACT US</a>
         </nav>
+
+
       <!-- Header ends here -->
-      </header>
+
       <!--beginning of Carousel-->
-      <main class="carousel">
+      <section class="carousel">
         <ol>
-          <li><img class="carousel__image" src="assets/top-image.png" alt="" /></li>
-          <li><img class="carousel__image" src="" alt="" /></li>
-          <li><img class="carousel__image" src="" alt="" /></li>
+          <li class="carousel__image"><img  src="assets/top-image.png" alt="" /></li>
         </ol>
 
         <!-- links to images for carousel-->
@@ -45,47 +46,50 @@
         </nav>
         <!--end of carousel-->
 
-      </main>
+      </section>
       <!-- "article0 represents a standart article model. any modifications to this structure would be labeld "article(n)"-->
-      <section>
-
+      <div class="aritcle">
         <article class="article0">
-          <h2"article0--title">Tony Hawk Foundation </h2>
-          <time"article0--date">this is a date</time>
-          <p"article0--para">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          <h2 class="article0--title">Rodney Mullen: Pop an ollie and innovate.</h2>
+          <time class="article0--date">oct, 28, 2001</time>
+          <p class="article0--para">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
           </p>
-          <a href="#LINK">June, 6, 2006</a>
+          <a href="#LINK">Read more</a>
         </article>
 
         <article class="article0">
           <h2 class="article0--title">Rodney Mullen: Pop an ollie and innovate.</h2>
           <time class="article0--date">oct, 28, 2001</time>
           <p class="article0--para">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
           </p>
           <a href="#LINK">Read more</a>
         </article>
 
         <article class="article0">
-          <h2"article0--title">MEGA-MAN 2</h2>
-          <time"article0--date">The Year is 200x</time>
-          <p"article0--para">
-           Dr. Wily, world renowned robotics expert and owner of Wily Labs, has built new fortress and army of robotic henchmen. Led by eight new Robot Masters of his design: Metal Man, Air Man, Bubble Man, Quick Man, Crash Man, Flash Man, Heat Man, and Wood Man, it is here that Dr. Wily is holding and building his army. However... The Earth has a Hero Designed specificly to combat Dr Wilys "Reaver Bots!" Mega Man! Sent by his creator, Dr. Light, Megaman will defeat Dr. Wily and his Robot Masters
-
+          <h2 class="article0--title">Rodney Mullen: Pop an ollie and innovate.</h2>
+          <time class="article0--date">oct, 28, 2001</time>
+          <p class="article0--para">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
           </p>
           <a href="#LINK">Read more</a>
         </article>
+
+    </div>
+
+
         <section class="sk8er">
           <h3 class="sk8er__pointer">Skateboarders</h3>
 
-          <img class="sk8er__image"  src="assets/sk8er-3.png"alt="Rodney Mullen"/>
-          <img class="sk8er__image" src="assets/sk8er-2.png"alt="Tommy Guerrero"/>
-          <img class="sk8er__image" src="assets/sk8er-1.png"alt="Steve Caballero" />
-          <img class="sk8er__image" src="assets/sk8er-4.png"alt="Lance Mountain"/>
+          <div class="sk8er__imagebox"> <img src="assets/sk8er-4.png"alt="Lance Mountain"/> </div>
+          <div class="sk8er__imagebox">  <img src="assets/sk8er-3.png"alt="Rodney Mullen"/></div>
+          <div class="sk8er__imagebox2">  <img src="assets/sk8er-2.png"alt="Tommy Guerrero"/></div>
+          <div class="sk8er__imagebox3"> <img src="assets/sk8er-1.png"alt="Steve Caballero"/></div>
         </section>
 
-        <section>
+      <div>
+        <section class= "boards">
           <img src="assets/sk8-1.png" alt=""/>
           <img src="assets/sk8-2.png" alt=""/>
           <img src="assets/sk8-3.png" alt=""/>
@@ -97,7 +101,7 @@
           <img src="assets/sk8-9.png" alt=""/>
           <img src="assets/sk8-10.png" alt=""/>
         </section>
-
+      </div>  
 
       <footer>
 
